<resources>
    <string name="app_name">Rine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_motto">Say something about you</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Network</string>
    <string name="menu_slideshow">Settings</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_search">Search</string>
    <string name="title_activity_rine_login">RineLoginActivity</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="button_remember_me">Remember Me</string>
    <string name="button_auto_login">Auto Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="power_by">Powered By</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="default_chat_intro">default chat introduction</string>

    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="empty_input_content">Chat</string>
    <string name="dummy_chat">Dummy Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="quit_dialog_title">确认退出</string>
    <string name="quit_dialog_message">确定要退出应用吗？</string>
    <string name="quit_dialog_confirm">确定</string>
    <string name="quit_dialog_cancel">取消</string>
</resources>