<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_slideshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@android:drawable/stat_notify_sdcard_prepare"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_network"
            android:icon="@android:drawable/stat_sys_upload"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_quit"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/menu_quit" />
    </group>
</menu>