<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.RineLoginActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="400dp"
        android:layout_marginBottom="196dp"
        android:background="@drawable/radius_rectangle"
        android:elevation="10dp"
        android:gravity="center"
        android:hint="@string/prompt_email"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login"
        android:layout_width="280dp"
        android:layout_height="64dp"
        android:layout_gravity="start"
        android:layout_marginTop="70dp"
        android:enabled="true"
        android:text="@string/action_sign_in"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/radius_rectangle"
        android:elevation="10dp"
        android:gravity="center"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Switch
        android:id="@+id/remember_me_switch"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:scaleX="1.1"
        android:scaleY="1.1"
        android:text="@string/button_remember_me"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/auto_login_switch"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:scaleX="1.1"
        android:scaleY="1.1"
        android:text="@string/button_auto_login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/login_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="50dp"
        android:elevation="4dp"
        android:padding="1dp"
        android:src="@drawable/default_avatar"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/RoundStyle"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="5dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:scaleX="4"
        android:scaleY="4"
        android:shadowColor="#89000000"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="1"
        android:text="@string/welcome"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>